--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <input type="text" id="time" name="time">
-  <button>Submit</button>
+  <input type="button" onclick="handleClick()" value="Submit">
   <h1 id="greeting"></h1>
   <script src="index.js"></script>
 </body>
